<resources>
    <string name="app_name">Chapter4_Ex2</string>
    <string name="hello">안녕하세요?</string>
    <string name="btn1">버튼1</string>
    <string name="btn2">버튼2</string>
    <string name="btn3">버튼3</string>
    <string name="btn4">버튼4</string>
    <string name="btn5">버튼5</string>
    <string name="text1">이건 텍스트뷰입니다.</string>
    <string name="edit1">이건 에디트텍스트입니다.</string>
    <string name="t1">textSize 속성</string>
    <string name="t2">textColor 속성</string>
    <string name="t3">textStyle 속성</string>
    <string name="t4">typeface 속성</string>
    <string name="t5">singleLine 속성 singleLine 속성 singleLine 속성 singleLine 속성 singleLine 속성 singleLine 속성 singleLine 속성</string>
    <string name="te1">TextView 연습1</string>
    <string name="te2">TextView 연습2</string>
    <string name="te3">TextView 연습3</string>
</resources>